Fix mobile navigation unread counts being invisible

--- a/less/header.less
+++ b/less/header.less
@@ -299,8 +299,7 @@
 	}
 }
 
-.unread-count[data-content]:not([data-content=""]):not([data-content="0"]):after {
-	content: attr(data-content);
+.unread-count:after {
 	position: absolute;
 	left: 23px;
 	top: 10px;
@@ -316,6 +315,10 @@
 	background: #c91106;
 	padding: 1px 2px;
 	font-family: @font-family-sans-serif;
+}
+
+.unread-count[data-content]:not([data-content=""]):not([data-content="0"]):after {
+	content: attr(data-content);
 }
 
 .slideout-menu .unread-count:after {
